--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -10,7 +10,7 @@ This series is going to start out intentionally pedantic and simple, to frame th
 
 * [Part 1/x: An obvious implementation based on `HashMap`.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-1-an-obvious-implementation-based-on-hashmap)
 
-* Part 2/x: A very naïve implementation based on sorted lists.
+* [Part 2/x: A very naïve implementation based on sorted lists.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-2-a-very-naive-implementation-based-on-sorted-lists)
 
 * Part 3/x: Organizing the data into tries.
 
@@ -477,7 +477,341 @@ In addition to the limited interface, there are other things not to like about a
 
 Let's write a relatively naïve implementation of our `Trace` trait using sorted lists.
 
-Coming soon!
+How is this going to work? Sorted lists aren't a standard data structure for maintaining indexed data sets. If we had a sorted list of all the data we could look things up, using binary search or something similar, but how do we update a list? If we need to keep it in order that can be very expensive, right?
+
+One standard approach, I'm not sure who gets credit for it, to maintain not one but multiple sorted lists of varying sizes. When we add new records we merge them in to the shortest of the lists, and as the short lists get bigger we merge them with the large lists. This has the downside that we need to logically merge the lists when we look at them, and the more concrete downside that the values for a key are not simply a `&[(K,V,T,size)]` contiguous slice. At the same time, with updates that probably wasn't going to happen anyhow.
+
+The strategy we are going to use is to merge any lists whose lengths are within a factor of two. This ensures that we have at most a logarithmic number of such lists and that the total work for each element is also logarithmic.
+
+Here is our noble data structure, a list of lists:
+
+```rust
+pub struct Lists<K, V, T> {
+	lists: Vec<Vec<(K, V, T, isize)>>,
+}
+``` 
+
+We will set this up so that the largest lists come first, and smaller lists later on. This makes it easy to push and pop things at the end of the list, which is a bit easier for Rust (whose `Vec` type supports vacancies at the end of its allocation, but not at the beginning).
+
+### A quite naïve implementation
+
+We now have some functions to implement, naïvely of course, for the `Trace` trait.
+
+#### Adding elements
+
+We can be a bit lazy for now and make adding elements relatively simple. Let's do that, and we will improve the behavior once we start looking at performance (just a bit further down this section). 
+
+```rust
+fn add<Iter: Iterator<Item=(K,V,T,isize)>>(&mut self, diff: Iter) {
+
+	// collect iterator contents into a temporary buffer.
+	let mut buffer: Vec<(K,V,T,isize)> = diff.collect();
+
+	// while the next smallest list is less than twice as large as the buffer, merge it in.
+	while self.lists.len() > 0 && self.lists[self.lists.len()-1].len() < 2 * buffer.len() {
+		buffer.extend(self.lists.pop().unwrap().into_iter());
+	}
+
+	// sort the buffer and push it on the end of our lists.
+	buffer.sort();
+	self.lists.push(buffer);
+}
+```
+
+The main bit of laziness here is that rather than merge sorted lists, which we should be able to do in time linear in the length of the lists, we are just concatenating and sorting the lists. It's worse by a logarithmic factor, asymptotically, but for the moment it is a bit easier to write. Plus if we don't do it now, we can see the difference when we fix the implementation!
+
+Another bit of laziness that we will need to address, eventually, is that of consolidation: if we have two records `(k,v,t,1)` and `(k,v,t,-1)` the two should be accumulated and canceled out. More generally, whatever their `delta` values are, they should be added up and put into a single record. This will be pretty easy with sorted lists, and was set to be a big pain in the bottom with the `HashMap` implementation from before. As it turns out, consolidation can be a nice performance win too: despite doing more work, it would seem, we can often reduce the amount of data we are working with.
+
+#### Getting elements
+
+The retrieval side of things is a bit more complicated, in part because we have a more than one list and in part because we have to define and implement an iterator.
+
+In principle, we don't have to do all that much to define an iterator; for a given key, we should look it up in each list and walk over the elements there. That is fine and dandy, and we will start with that. However, what we *actually* would like is to iterate over the records in sorted order; we would like like to merge the sorted sub-lists, to present the appearance of sorted data. Why? Because we are heading towards a more sophisticated interface where one can *navigate* rather than *iterate* through the resulting tuples. More in a bit.
+
+Let's take the simple approach for now. We look up the key in each list, and if it is present we add its range of tuples to a list of such slices. Importantly, we don't actually iterate through all of the values beforehand; if the user doesn't want to use the iterator, the cost to building it shouldn't be large.
+
+```rust
+fn get(&'a mut self, key: &K) -> Self::OutputIterator {
+	// storage for slices
+	let mut slices = Vec::new();
+	for list in &self.lists {
+		let lower = binary_search(list, |x| &x.0 < key);
+		let upper = binary_search(list, |x| &x.0 <= key);
+		if lower < upper {
+			slices.push(&list[lower .. upper]);
+		}
+	}
+
+	OutputIter {lists: slices }
+}
+```
+
+This is what you might imagine, except that if you are familiar with Rust you might be surprised that `binary_search` is used as a free method, rather than using `list.binary_search(key)`. Unfortunately, Rust's binary search method doesn't find the *first* matching element, just *a* matching element. To find the actual range we would need to search backwards and forwards, which goes against our "don't scan the elements unless asked". 
+
+Fortunately it is easier to write your own binary search than it is to work around Rust's quirky behavior.
+
+```rust
+/// Returns the count of the number of elements satisfying `test`.
+///
+/// Correct behavior relies on true values for `test` coming before
+/// false values in `slice`.
+fn binary_search<T, F: Fn(&T)->bool>(slice: &[T], test: F) -> usize {
+
+	// bounds on result.
+	let mut lower = 0;
+	let mut upper = slice.len();
+
+	while lower < upper {
+		let mid = (lower + upper) / 2;
+		if test(&slice[mid]) {
+			lower = mid + 1;
+		}
+		else {
+			upper = mid;
+		}
+	}
+
+	assert_eq!(lower, upper);
+	lower
+}
+```
+
+All we need to do now is sort out the `OutputIter` type and we should be set!
+
+#### Iterating outputs
+
+Our `OutputIter` will have a list of sorted slices, and walk through each of them in no particular order. We will improve the order later on. 
+
+```rust
+pub struct OutputIter<'a, K:'a, V:'a, T:'a> {
+	lists: Vec<&'a [(K,V,T,isize)]>
+}
+```
+
+Now we need to write an iterator implementation. Since we have no particular order required, we should just look at `lists` and see if it is empty, and if not go and read some element from one of the slices. We then need to advance the slice that we read and clean up any empty slices.
+
+```rust
+impl<'a, K:'a, V:'a, T:'a> Iterator for OutputIter<'a, K, V, T> {
+	type Item = (&'a K, &'a V, &'a T, isize);
+	fn next(&mut self) -> Option<Self::Item> {
+		if let Some(mut last) = self.lists.pop() {
+			let result = (&last[0].0, &last[0].1, &last[0].2, last[0].3);
+			last = &last[1..];
+			if last.len() > 0 {
+				self.lists.push(last);
+			}
+			Some(result)
+		}
+		else {
+			None
+		}
+	}
+}
+```
+
+This implementation repeatedly pops and pushes things from `self.lists`, which feels a bit silly and I'm hoping that LLVM will optimize that away. Otherwise it is a bit of a pain to get a mutable reference to the last list (so it can be advanced), and then mutate the list holding on to it. You can, but you have to flatten out the control flow a bit and pass some `bool`s around.
+
+### Looking at performance
+
+Despite having a very simple implementation, we might still be interested in how this implementation behaves. In particular, it would be great to know which of the highlighted issues are the main pain points, and maybe which pain points haven't yet been highlighted.
+
+#### Insertion throughput
+
+Let's see how quickly we can put elements into our trace. Insertion throughput is one of the reasons we are avoiding a `HashMap` implementation, so we would like this to be reasonably good. We'll start by just trying to understand it.
+
+I've written a `profile-lists.rs` program that takes a number of keys, number of values, and batch size, and repeatedly introduces batches of records whose keys and values are picked by an increasing counter mod the number of valid possibilities. It prints out after every so-many batches.
+
+##### A hash map baseline
+
+Before we get started, I ran the computation with a `HashMap<K, Vec<(V,T,isize)>` as written up earlier. It doesn't implement the `Trace` trait, but we can still run it to get a feel. Here is how it looks:
+
+	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
+	     Running `target/release/profile-lists 1000 1000 1000 1000`
+	throughput: 16517799.18 elts/sec @ 1000000 elts
+	throughput: 16582305.02 elts/sec @ 2000000 elts
+	throughput: 15579539.55 elts/sec @ 3000000 elts
+	throughput: 16189958.99 elts/sec @ 4000000 elts
+	throughput: 14807005.80 elts/sec @ 5000000 elts
+	...
+	throughput: 8571400.89 elts/sec @ 99000000 elts
+	throughput: 8587396.41 elts/sec @ 100000000 elts
+	throughput: 8603516.77 elts/sec @ 101000000 elts
+	...
+	throughput: 8138150.61 elts/sec @ 522000000 elts
+	throughput: 8137500.97 elts/sec @ 523000000 elts
+	throughput: 8136678.71 elts/sec @ 524000000 elts
+
+At this point the process crossed the 16GB threshold and I stopped the experiment. But, we have a starting baseline for insertion throughput: between 8 and 16 million elements per second. You could probably do better, for example [here is a fun read](https://infosys.uni-saarland.de/publications/ARCD15.pdf) where they are worried about a lot more keys than I used (them: 16M, 256M, 1B; here: 1K). 
+
+Just to set the scale, in case you would like to compare to their Figures 2 and 3, which report 20 million inserts per second, here are some `HashMap` numbers with 16M keys:
+
+	Echidnatron% cargo run --release --bin profile-lists -- 16000000 1000 1000 1000
+	     Running `target/release/profile-lists 16000000 1000 1000 1000`
+	throughput: 2578612.44 elts/sec @ 1000000 elts
+	throughput: 2446594.26 elts/sec @ 2000000 elts
+	throughput: 2782877.84 elts/sec @ 3000000 elts
+	throughput: 2339393.02 elts/sec @ 4000000 elts
+	throughput: 2522213.50 elts/sec @ 5000000 elts
+	...
+	throughput: 3296886.79 elts/sec @ 99000000 elts
+	throughput: 3304827.24 elts/sec @ 100000000 elts
+	throughput: 3312735.90 elts/sec @ 101000000 elts
+
+These numbers start a bit shaky and improve, probably because for the first 16 million elements the hash map is still getting properly sized. But substantially less than the paper above. If we turn things up to 256 million keys, the hash map does this:
+
+	Echidnatron% cargo run --release --bin profile-lists -- 256000000 1000 1000 1000
+	     Running `target/release/profile-lists 256000000 1000 1000 1000`
+	throughput: 2529228.46 elts/sec @ 1000000 elts
+	throughput: 2496031.20 elts/sec @ 2000000 elts
+	throughput: 2821726.46 elts/sec @ 3000000 elts
+	throughput: 2392483.92 elts/sec @ 4000000 elts
+	throughput: 2577791.26 elts/sec @ 5000000 elts
+	...
+	throughput: 1867181.91 elts/sec @ 120000000 elts
+	throughput: 1855464.96 elts/sec @ 121000000 elts
+	throughput: 1839465.73 elts/sec @ 122000000 elts
+
+This falls over quite a bit earlier, because the hash map has a fair amount of per-key state. We could try one billion keys, but you'll notice that we only managed 122 million insertions above, so we didn't even get the opportunity to repeat a key. The same thing should happen with one billion keys.
+
+So, depending on the numbers of keys we see a range of throughputs with the very simple `HashMap` implementation: from just shy of two million inserts per second, up to 16 million inserts per second. The [linked paper](https://infosys.uni-saarland.de/publications/ARCD15.pdf) shows a pretty consistent 20 million single-threaded inserts per second, even with large numbers of keys, through engineering and possibly some different assumptions. 
+
+##### Our most naïve implementation
+
+Let's slot in our sorted list implementation. Get ready for some worse numbers!
+
+For 1000 keys and 1000 values, batch size 1000, printing every 1000, the numbers look like:
+
+	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
+	     Running `target/release/profile-lists 1000 1000 1000 1000`
+	throughput: 2419446.83 elts/sec @ 1000000 elts
+	throughput: 2157777.54 elts/sec @ 2000000 elts
+	throughput: 1907561.41 elts/sec @ 3000000 elts
+	throughput: 1939368.69 elts/sec @ 4000000 elts
+	throughput: 1694788.02 elts/sec @ 5000000 elts
+	...
+	throughput: 1204330.69 elts/sec @ 99000000 elts
+	throughput: 1210728.25 elts/sec @ 100000000 elts
+	throughput: 1215091.39 elts/sec @ 101000000 elts
+	...
+	throughput: 1092312.51 elts/sec @ 260000000 elts
+	throughput: 1094232.04 elts/sec @ 261000000 elts
+	throughput: 1096708.09 elts/sec @ 262000000 elts
+
+You can see where this is going. Actually, nowhere because it ran out of memory at this point, but the throughput goes down as we run: we are only appending data and never removing anything. Given that our per-record work is "logarithmic", if we keep running forever eventually that is going to increase. The good news is we will run out of memory before it becomes too serious.
+
+These numbers aren't so great. They are about one-third the number for the many-keys `HashMap`, and one-tenth the numbers for the thousand-keys `HashMap`. On the positive side, these numbers don't vary at all as we change the numbers of keys, though being consistently slow isn't much of a technical achievement.
+
+One of the reasons the code is slow is that we are re-sorting appended sorted data, rather than merging it. Let's say we try to do merging correctly. I've written the following merging code:
+
+```rust
+/// Merges two sorted vectors into a new result vector
+fn merge<T: Ord>(source1: Vec<T>, source2: Vec<T>) -> Vec<T> {
+
+	// pre-allocate the required amount of space.
+	let mut result = Vec::with_capacity(source1.len() + source2.len());
+
+	// convert vectors into peekable iterators.
+	let mut iter1 = source1.into_iter().peekable();
+	let mut iter2 = source2.into_iter().peekable();
+
+	// while comparisons remain, do them and move elements.
+	while iter1.peek().is_some() && iter2.peek().is_some() {
+		match iter1.peek().unwrap().cmp(&iter2.peek().unwrap()) {
+			::std::cmp::Ordering::Less => { 
+				result.push(iter1.next().unwrap()); 
+			},
+			::std::cmp::Ordering::Equal => { 
+				result.push(iter1.next().unwrap()); 
+				result.push(iter2.next().unwrap()); 
+			}
+			::std::cmp::Ordering::Greater => { 
+				result.push(iter2.next().unwrap()); 
+			}		
+		}
+	}
+
+	// drain whatever remains.
+	result.extend(iter1);
+	result.extend(iter2);
+
+	result
+}
+```
+
+If we replace the `buffer.extend(..)` line with `buffer = merge(buffer, ...)` and move the `buffer.sort()` from the end to just after it is collected, we get some better numbers:
+
+	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
+	     Running `target/release/profile-lists 1000 1000 1000 1000`
+	throughput: 6339778.39 elts/sec @ 1000000 elts
+	throughput: 5848068.07 elts/sec @ 2000000 elts
+	throughput: 5465519.50 elts/sec @ 3000000 elts
+	throughput: 5684741.96 elts/sec @ 4000000 elts
+	throughput: 5109088.94 elts/sec @ 5000000 elts
+	...
+	throughput: 4222326.35 elts/sec @ 99000000 elts
+	throughput: 4243203.70 elts/sec @ 100000000 elts
+	throughput: 4258128.61 elts/sec @ 101000000 elts
+	...
+	throughput: 3949494.99 elts/sec @ 522000000 elts
+	throughput: 3953483.23 elts/sec @ 523000000 elts
+	throughput: 3957824.17 elts/sec @ 524000000 elts
+
+It falls over a little bit later because `merge` allocates half as much memory as `buffer.sort()`. 
+
+We are now doing better than the many-keys `HashMap` numbers, though not as good as the thousand-keys numbers. This feels pretty good, though if we were to consider lookup times the feeling would pass.
+
+So that we can feel even better about ourselves before we close out our discussion of the very naïve version, let's test a feature that we will eventually want: consolidation of weights for elements with the same `(key,val,time)` fields. As part of `merge`, we can compare just the `(K, V, T)` part of each record, and add weights if they are the same rather than returning both elements. 
+
+	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
+	     Running `target/release/profile-lists 1000 1000 1000 1000`
+	throughput: 22862046.57 elts/sec @ 1000000 elts
+	throughput: 21750026.25 elts/sec @ 2000000 elts
+	throughput: 21832599.59 elts/sec @ 3000000 elts
+	throughput: 21723036.50 elts/sec @ 4000000 elts
+	throughput: 21753468.62 elts/sec @ 5000000 elts
+	...
+	throughput: 20459218.12 elts/sec @ 99000000 elts
+	throughput: 20448964.09 elts/sec @ 100000000 elts
+	throughput: 20447100.05 elts/sec @ 101000000 elts
+	...
+	throughput: 20240488.38 elts/sec @ 999000000 elts
+	throughput: 20242328.79 elts/sec @ 1000000000 elts
+	throughput: 20242923.04 elts/sec @ 1001000000 elts
+	...
+	throughput: 20447534.22 elts/sec @ 9999000000 elts
+	throughput: 20447501.86 elts/sec @ 10000000000 elts
+	throughput: 20447385.10 elts/sec @ 10001000000 elts
+
+Ok, now we are talking. Twenty million inserts per second. This should actually still degrade, just much more slowly; the process had reach about 304MB at this point, ten billion elements in.
+
+What happened? The way the code is written the `time` field only gets bumped after each million elements, and because the data are a bit degenerate, with exactly as many keys as values, there are only one thousand distinct values in that million elements. They get compacted quite well! Each round of one million inserts is compacted down to one thousand, before being merged with any older elements.
+
+This is perhaps an interesting representation of what a hot set of updates might look like, with periodic transitions to new hot elements. Perhaps not. 
+
+We can do a different experiment where we have 16 million keys, one value, and one timestamp, something like the 16 million key example above where we are able to update in place.
+
+	Echidnatron% cargo run --release --bin profile-lists -- 16000000 1 1000 1000
+	     Running `target/release/profile-lists 16000000 1 1000 1000`
+	throughput: 6695085.83 elts/sec @ 1000000 elts
+	throughput: 6019800.15 elts/sec @ 2000000 elts
+	throughput: 5659953.08 elts/sec @ 3000000 elts
+	throughput: 5808231.16 elts/sec @ 4000000 elts
+	throughput: 5213819.41 elts/sec @ 5000000 elts
+	...
+	throughput: 4146630.65 elts/sec @ 99000000 elts
+	throughput: 4167738.99 elts/sec @ 100000000 elts
+	throughput: 4176494.03 elts/sec @ 101000000 elts
+	...
+	throughput: 4063433.45 elts/sec @ 999000000 elts
+	throughput: 4053770.59 elts/sec @ 1000000000 elts
+	throughput: 4055836.85 elts/sec @ 1001000000 elts
+	...
+
+This looks like it is slowing down a bit, but it shouldn't really be (dunno!). It is sitting steady around between 600 megabytes and 1GB (up and down a bit, as lists come and go). For 16 million 32 byte records (multiplied: 512MB) this lines up with our expectations perfectly. This is better than our hash table implementation up above, and with a much more compact memory footprint. It is yet not better than the informative linked paper, and may not become so, but I think it is a good start; we have more plans in store!
+
+#### Look-up throughput
+
+Looking things up is going to be slow. We are going to improve it later on (hint: "index"), but for now it is slow. It is dinner time, so I'm not going to measure things for y'all, but binary search is much slower than looking something up in a hash map.
 
 ## Part 3: Organizing the data into tries.
 
