funny dots added

--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -10,7 +10,7 @@ This series is going to start out intentionally pedantic and simple, to frame th
 
 * [Part 1/x: An obvious implementation based on `HashMap`.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-1-an-obvious-implementation-based-on-hashmap)
 
-* [Part 2/x: A very naïve implementation based on sorted lists.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-2-a-very-naive-implementation-based-on-sorted-lists)
+* [Part 2/x: A very naïve implementation based on sorted lists.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-2-a-very-naïve-version-based-on-sorted-lists)
 
 * Part 3/x: Organizing the data into tries.
 
